recursion.cons.butlast.ButLast.scala.code
def butLast(l:List[Int]): List[Int] = {
  if(l.size==1)return Nil;
  else return head::butLast(l.tail);
}